src/test/ui/keyword_generics/feature-gate-effects.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate-effects.rs:6:5
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     "just fail this test"
   |     ^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
